noinst_LIBRARIES=libpcre.a
libpcre_a_SOURCES=config.h dftables.c pcre_chartables.c pcre_compile.c pcre_config.c pcrecpp.h pcredemo.c pcre_dfa_exec.c pcre_exec.c pcre_fullinfo.c pcre_get.c pcre_globals.c pcregrep.c pcre.h pcre_info.c pcre_internal.h pcre_maketables.c pcre_ord2utf8.c pcreposix.c pcreposix.h pcre_printint.c pcre_refcount.c pcre_scanner.h pcre_stringpiece.h pcre_study.c pcre_tables.c pcretest.c pcre_try_flipped.c pcre_valid_utf8.c pcre_version.c pcre_xclass.c
CFLAGS=-O2
CPPFLAGS=
