bin_PROGRAMS=3w3
3w3_SOURCES=3w3_main.c 3w3_config.c 3w3_config.h 3w3_afunix.c 3w3_afunix.h 3w3_list.c 3w3_list.h 3w3_logger.c 3w3_logger.h 3w3_socket.c 3w3_socket.h 3w3_afinet.c 3w3_afinet.h 3w3_interface.c 3w3_interface.h 3w3_player.c 3w3_player.h 3w3_globals.c 3w3_globals.h 3w3_process_input.c 3w3_process_input.h 3w3_command.c 3w3_command.h 3w3_login.c 3w3_login.h 3w3_dfile.c 3w3_dfile.h 3w3_hash.c 3w3_hash.h 3w3_mpool.c 3w3_mpool.h 3w3_alloc.c 3w3_alloc.h 3w3_telnet.h
3w3_LDADD=$(top_builddir)/sqlite/libsqlite.a
3w3_LDADD+=$(top_builddir)/pcre/libpcre.a
